compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__custom_types__conflict_with_import.snap
---
source: compiler-core/src_refactored/__core/type_/tests/custom_types.rs
assertion_line: 118
expression: "import wibble.{type A} type A { C }"
snapshot_kind: text
---
----- SOURCE CODE
-- wibble.gleam
pub type A { B }

-- main.gleam
import wibble.{type A} type A { C }

----- ERROR
error: Duplicate type definition
  ┌─ /src/one/two.gleam:1:24
  │
1 │ import wibble.{type A} type A { C }
  │                ------  ^^^^^^ Redefined here
  │                │        
  │                First defined here

The type `A` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
