compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__custom_types__depreacted_type_deprecate_varient_err.snap
---
source: compiler-core/src_refactored/__core/type_/tests/custom_types.rs
assertion_line: 68
expression: "\n@deprecated(\"2\")\npub type Numbers {\n  @deprecated(\"1\")\n  One\n  Two\n}\n\npub fn num() {\n  let _two = Two\n  Nil\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

@deprecated("2")
pub type Numbers {
  @deprecated("1")
  One
  Two
}

pub fn num() {
  let _two = Two
  Nil
}


----- ERROR
error: Custom type already deprecated
  ┌─ /src/one/two.gleam:5:3
  │
5 │   One
  │   ^^^

This custom type has already been deprecated, so deprecating one of its
variants does nothing.
Consider removing the deprecation attribute on the variant.
