compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__custom_types__deprecated_type.snap
---
source: compiler-core/src_refactored/__core/type_/tests/custom_types.rs
assertion_line: 18
expression: "\n@deprecated(\"Dont use this!\")\npub type Cat {\n  Cat(name: String, cuteness: Int)\n}\n\npub fn name() -> String {\n  let c = Cat(\"Numi\", 20)\n  c.name\n}\n        "
snapshot_kind: text
---
----- SOURCE CODE

@deprecated("Dont use this!")
pub type Cat {
  Cat(name: String, cuteness: Int)
}

pub fn name() -> String {
  let c = Cat("Numi", 20)
  c.name
}
        

----- WARNING
warning: Deprecated value used
  ┌─ /src/warning/wrn.gleam:8:11
  │
8 │   let c = Cat("Numi", 20)
  │           ^^^ This value has been deprecated

It was deprecated with this message: Dont use this!
